# UWEAI-LidarDriver

./: README.md
hesai/: CMakeLists.txt  CMakeLists_ros2.txt  README.md  package_corrected.xml  package_ros2.xml
hesai/config/: HesaiLidarParams.cfg  pandar40p_calibration.csv
hesai/include/hesai_lidar_driver/: cone_detector.h  hesai_driver.h  hesai_driver_ros2.h  packet_parser.h  point_cloud_processor.h
hesai/launch/: hesai_cone_detection.launch  hesai_cone_detection_ros2.launch.py  hesai_mapping_demo.launch.py  hesai_visualization.launch.py  test_hesai.launch.py
hesai/rviz/: hesai_cone_detection.rviz  hesai_mapping_demo.rviz  hesai_visualization.rviz
hesai/scripts/: launch_mapping_demo.sh  run_tests.sh  simulate_lidar_packets.py  test_point_cloud_publisher.py
hesai/src/: debug_segfault.cpp  hesai_demo_node.cpp  hesai_driver.cpp  hesai_driver_ros2.cpp  hesai_lidar_node.cpp  hesai_lidar_node_ros2.cpp  hesai_test_minimal.cpp  hesai_working_driver.cpp  packet_parser.cpp  packet_parser_ros2.cpp
hesai/test/: test_cone_detector.cpp  test_packet_parser.cpp  test_point_cloud_processor.cpp
hesai/test/data/: README.md
hesai/test/integration/: hesai_integration.test  test_hesai_integration.cpp
